SFPracticeApp/main/default/objects/Historical_Certification__c/Historical_Certification__c.object-meta.xml
<CustomObject>
    <label>Historical Certification</label>
    <nameField>
        <label>Historical Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>