SFPracticeApp/main/default/objects/Historical_Certification__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>