SFPracticeApp/main/default/objects/Historical_Certification__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State / Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>