SFPracticeApp/main/default/objects/Historical_Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Certification__c</columns>
    <columns>Country__c</columns>
    <columns>Email__c</columns>
    <columns>Period__c</columns>
    <columns>Resource__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>